@@ -4,62 +4,129 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kitpvp-spigot</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-
     <parent>
         <groupId>gg.solarmc</groupId>
         <artifactId>solar-parent</artifactId>
-        <version>0.5.4</version>
+        <version>0.6.2</version>
     </parent>
 
+    <artifactId>kitpvp-plugin</artifactId>
+    <version>0.2.0-SNAPSHOT</version>
+
     <properties>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <dataloader.version>0.5.2-SNAPSHOT</dataloader.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>solar-rekt</id>
-            <url>https://mvn-repo.solarmc.gg/releases</url>
-        </repository>
-        <repository>
-            <id>placeholderapi</id>
-            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        </repository>
-    </repositories>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.config=ALL-UNNAMED
+                        --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp.handler=ALL-UNNAMED
+                        --add-opens gg.solarmc.kitpvp/gg.solarmc.kitpvp=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
-            <groupId>gg.solarmc</groupId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.11.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.30</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>gg.solarmc.paper</groupId>
             <artifactId>solarpaper-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <version>1.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>gg.solarmc.paper</groupId>
+            <artifactId>solarpaper-itemserializer</artifactId>
+            <version>1.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>gg.solarmc.loader</groupId>
             <artifactId>loader-mod-kitpvp</artifactId>
-            <version>0.4.2-SNAPSHOT</version>
+            <version>${dataloader.version}</version>
         </dependency>
         <dependency>
             <groupId>gg.solarmc.loader</groupId>
             <artifactId>loader-mod-clans</artifactId>
-            <version>0.4.1</version>
+            <version>${dataloader.version}</version>
         </dependency>
         <dependency>
             <groupId>gg.solarmc.loader</groupId>
             <artifactId>loader-mod-credits</artifactId>
-            <version>0.4.1</version>
+            <version>${dataloader.version}</version>
         </dependency>
         <dependency>
             <groupId>space.arim.dazzleconf</groupId>
             <artifactId>dazzleconf-ext-snakeyaml</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
-            <groupId>me.clip</groupId>
+            <groupId>space.arim.api</groupId>
+            <artifactId>arimapi-util-dazzleconf</artifactId>
+            <version>0.24.3</version>
+        </dependency>
+        <dependency>
+            <groupId>space.arim.api</groupId>
+            <artifactId>arimapi-env-bukkit</artifactId>
+            <version>0.24.3</version>
+        </dependency>
+        <dependency>
+            <groupId>space.arim.injector</groupId>
+            <artifactId>injector</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <!-- Todo: Get rid of PAPI -->
+        <dependency>
+            <groupId>gg.solarmc.placeholder</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.9</version>
+            <version>2.10.10-DEV-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    
+
+    <repositories>
+        <repository>
+            <id>solar-releases</id>
+            <url>https://mvn-repo.solarmc.gg/releases</url>
+        </repository>
+        <repository>
+            <id>arim-mvn-lgpl3</id>
+            <url>https://mvn-repo.arim.space/lesser-gpl3</url>
+        </repository>
+        <repository>
+            <id>arim-mvn-gpl3</id>
+            <url>https://mvn-repo.arim.space/gpl3</url>
+        </repository>
+    </repositories>
 </project>
